fixed font and adjusted some spacing between elements

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+HK:wght@500&display=swap');
-
 
 /*=============
 	base styles
@@ -11,7 +9,7 @@
 }
 
 body{
-	font-family: 'Noto Sans HK', Arial, sans-serif;
+	font-family: 'Poppins', arial, sans-serif;
 	line-height: 1.5;
 	font-size: 1em;
 	background: #1895d9;
@@ -35,8 +33,6 @@ img{
 .profile-pic{
 	max-width: 350px;
 	padding: 1em 1em;
-	border: 2px dashed black;
-
 }
 
 h2{
@@ -67,6 +63,7 @@ h1{
 
 .main-nav li{
 	margin-bottom: 5px;
+	background: #34ebd2;
 }
 
 .main-nav a{
@@ -74,6 +71,8 @@ h1{
 	padding: 10px 15px;
 	
 }
+
+
 
 .main-nav a:hover{
 	background: rgba(0,0,0,.5);	
@@ -107,11 +106,11 @@ h1{
 
 .banner{
 	margin: 80px 0;
-	padding-top: 87px;
+	
 }
 
 .contact-info{
-	margin-bottom: 8em;
+	margin-bottom: 4em;
 }
 
 .contact-info span{
@@ -124,7 +123,7 @@ h1{
 	border-top: 1px solid black;
 	width: 95%;
 	margin: 0 auto;
-	padding: 1em 0 3em;
+	padding: 1em 0;
 }
 
 
@@ -252,10 +251,6 @@ h1{
 
 
 }
-
-
-
-
 
 
 
